@@ -5,5 +5,4 @@ COPY export-vault-secrets.sh /init-scripts/10-export-vault-secrets.sh
 
 ENV JAVA_OPTS="-Djava.security.egd=file:/dev/./urandom \
                -Dspring.profiles.active=nais \
-               -Xmx512m \
-               --add-opens=java.base/java.io=ALL-UNNAMED"
+               -Xmx512m"
